--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
     "@types/papaparse": "^5.3.7",
     "@types/react-redux": "^7.1.25",
     "@types/redux": "^3.6.0",
+    "@types/redux-devtools-extension": "^2.13.2",
     "@types/redux-promise": "^0.5.29",
-    "@types/redux-thunk": "^2.1.0"
+    "@types/redux-thunk": "^2.1.0",
+    "redux-devtools-extension": "^2.13.9"
   }
 }
